--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,26 @@
 # This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+ # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+ name: Go
 
-on:
-  push:
-  pull_request:
+ on:
+   push:
+   pull_request:
 
-jobs:
+ jobs:
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+   build:
+     runs-on: ubuntu-latest
+     steps:
+     - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.6
-        fetch-depth: 1
-        path: go/src/github.com/jmingtan/hackernews
+     - name: Set up Go
+       uses: actions/setup-go@v3
+       with:
+         go-version: 1.18
 
-    - name: Build
-      run: go get
-      env:
-        GOPATH: /home/runner/work/hackernews/hackernews
+     - name: Build
+       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
-      env:
-        GOPATH: /home/runner/work/hackernews/hackernews
+     - name: Test
+       run: go test -v ./...
